fix(mobile): remove animations on mobile

--- a/src/components/bio/_bio.scss
+++ b/src/components/bio/_bio.scss
@@ -22,7 +22,10 @@
   }
 
   &:hover {
-    transform: translateX(10px) perspective(600px) rotateY(40deg);
+
+    @include medium {
+      transform: translateX(10px) perspective(600px) rotateY(40deg);
+    }
   }
 
   a {
